--- a/app/front/screens/menu/menu.kv
+++ b/app/front/screens/menu/menu.kv
@@ -14,103 +14,128 @@ Menu:
                 size: self.size
 
         BoxLayout:
-            spacing: '10dp'
+            #spacing: '10dp'
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/home.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
+            AnchorLayout:
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/home.png'
+                    #width: '30dp'
+                    #height: '30dp'
+                    #y: self.parent.y
+                    #x: self.parent.x
             AnchorLayout:
                 anchor_x: 'left'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=home]Home[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
                     on_ref_press: root.manager.current = 'home'
 
         BoxLayout:
-            spacing: '10dp'
+            #spacing: '10dp'
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/cur.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
             AnchorLayout:
-                padding: '50dp'
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/cur.png'
+                    #width: '30dp'
+                    #height: '30dp'
+                    #y: self.parent.y
+                    #x: self.parent.x
+            AnchorLayout:
+                #padding: '30dp'
                 anchor_x: 'left'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=all currencies]All currencies[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
                     on_ref_press: root.manager.current = 'all'
         BoxLayout:
-            spacing: '10dp'
+            #spacing: '30dp'
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/find.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
             AnchorLayout:
-                padding: '50dp'
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/find.png'
+                    width: '30dp'
+                    height: '30dp'
+                    y: self.parent.y
+                    x: self.parent.x
+            AnchorLayout:
+                #padding: '50dp'
                 anchor_x: 'left'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=Find currency]Find currency[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
                     on_ref_press: root.manager.current = 'find'
 
         BoxLayout:
-            spacing: '10dp'
+            #spacing: '10dp'
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/res.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
             AnchorLayout:
-                padding: '30dp'
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/res.png'
+                    width: '30dp'
+                    height: '30dp'
+                    y: self.parent.y
+                    x: self.parent.x
+            AnchorLayout:
+                #padding: '30dp'
                 anchor_x: 'left'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=Resource]Resources[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
                     on_ref_press: root.manager.current = 'res'
 
         BoxLayout:
-            spacing: '10dp'
+            #spacing: '10dp'
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/crypt.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
             AnchorLayout:
-                padding: '60dp'
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/crypt.png'
+                    width: '30dp'
+                    height: '30dp'
+                    y: self.parent.y
+                    x: self.parent.x
+            AnchorLayout:
+                #padding: '60dp'
                 anchor_x: 'left'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=Cryptocurrency]Cryptocurrency[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
@@ -118,19 +143,24 @@ Menu:
 
         BoxLayout:
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/convert.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
             AnchorLayout:
-                padding: '35dp'
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/convert.png'
+                    width: '30dp'
+                    height: '30dp'
+                    y: self.parent.y
+                    x: self.parent.x
+            AnchorLayout:
+                #padding: '35dp'
                 anchor_x: 'left'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=Converter]Converter[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
@@ -138,20 +168,25 @@ Menu:
 
         BoxLayout:
             #size_hint: .2, .2
-            Image:
-                size_hint: .1, 1
-                source: paths.images + 'appIcons/settings.png'
-                width: '40dp'
-                height: '40dp'
-                y: self.parent.y
-                x: self.parent.x
+            AnchorLayout:
+                size_hint: .3, 1
+                Image:
+                    size_hint: .3, 1
+                    source: paths.images + 'appIcons/settings.png'
+                    width: '30dp'
+                    height: '30dp'
+                    y: self.parent.y
+                    x: self.parent.x
 
             AnchorLayout:
                 anchor_x: 'left'
-                padding: '25dp'
+                #padding: '25dp'
                 Label:
+                    text_size: self.size
+                    halign: 'left'
+                    valign: 'middle'
                     markup: True
-                    size_hint: None, None
+                    size_hint: 1, 1
                     text: '[ref=Settings]Settings[/ref]'
                     font_size: '30dp'
                     color: 0,0,0,1
